svc.yml
apiVersion: v1
kind: Service
metadata:
  name: blur-image-service
spec:
  selector:
    app: blur-image
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
